# ArkPaintingConverter

./: .gitignore  ArkPaintingConverter.desktop  CMakeLists.txt  README.md  cmake_uninstall.cmake.in
data/: ColorTableEvolved.csv  painting.ini
icons/: ArkPaintingConverter.xpm
resources/config/: painting.ini
src/: ArkPaintingConverter.pro  colorchooser.cpp  colorchooser.h  config_path_manager.h  ditherbase.cpp  ditherbase.h  drawingarea.cpp  drawingarea.h  floyd_steinberg.cpp  floyd_steinberg.h  jarvisjudiceninke.cpp  jarvisjudiceninke.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix.h  moc_colorchooser.cpp  sierra.cpp  sierra.h  tpainting.h
